bad/2020-07-06/14-50/141.0/build.err
run.c: In function ‘stomp’:
run.c:10:5: error: expected ‘,’ or ‘;’ before ‘while’
     while(fop[i] !='\0')
     ^~~~~